Control multitenancy from system property
Signed-off-by: Daniel Widdis <widdis@gmail.com>